blrlblelrlrl
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp:402:6: error: no declaration matches ‘bool midiMind::ProcessorManager::savePreset(const std::string&, const std::string&)’
  402 | bool ProcessorManager::savePreset(const std::string& chainId,
      |      ^~~~~~~~~~~~~~~~
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp:402:6: note: no functions named ‘bool midiMind::ProcessorManager::savePreset(const std::string&, const std::string&)’
In file included from /home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp:21:
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.h:107:7: note: ‘class midiMind::ProcessorManager’ defined here
  107 | class ProcessorManager {
      |       ^~~~~~~~~~~~~~~~
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp:421:6: error: no declaration matches ‘bool midiMind::ProcessorManager::deletePreset(const std::string&)’
  421 | bool ProcessorManager::deletePreset(const std::string& presetName) {
      |      ^~~~~~~~~~~~~~~~
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp:421:6: note: no functions named ‘bool midiMind::ProcessorManager::deletePreset(const std::string&)’
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.h:107:7: note: ‘class midiMind::ProcessorManager’ defined here
  107 | class ProcessorManager {
      |       ^~~~~~~~~~~~~~~~
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp: In member function ‘void midiMind::ProcessorManager::resetStatistics()’:
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp:582:16: warning: unused structured binding declaration [-Wunused-variable]
  582 |     for (auto& [id, chain] : chains_) {
      |                ^~~~~~~~~~~
[ 90%] Building CXX object CMakeFiles/midimind.dir/src/api/ApiServer.cpp.o
make[2]: *** [CMakeFiles/midimind.dir/build.make:401: CMakeFiles/midimind.dir/src/midi/processing/ProcessorManager.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
/home/pi/midiMind/backend/src/api/ApiServer.cpp: In member function ‘void midiMind::ApiServer::onMessage(connection_hdl, message_ptr)’:
/home/pi/midiMind/backend/src/api/ApiServer.cpp:305:43: error: ‘INVALID_MESSAGE’ is not a member of ‘midiMind::protocol::ErrorCode’
  305 |                      protocol::ErrorCode::INVALID_MESSAGE,
      |                                           ^~~~~~~~~~~~~~~
/home/pi/midiMind/backend/src/api/ApiServer.cpp:321:43: error: ‘INVALID_MESSAGE’ is not a member of ‘midiMind::protocol::ErrorCode’
  321 |                      protocol::ErrorCode::INVALID_MESSAGE,
      |                                           ^~~~~~~~~~~~~~~
/home/pi/midiMind/backend/src/api/ApiServer.cpp: In member function ‘void midiMind::ApiServer::processRequest(connection_hdl, const midiMind::MessageEnvelope&)’:
/home/pi/midiMind/backend/src/api/ApiServer.cpp:404:37: error: ‘const struct midiMind::protocol::Request’ has no member named ‘id’
  404 |                  " (ID: " + request.id + ")");
      |                                     ^~
/home/pi/midiMind/backend/src/api/ApiServer.cpp:410:32: error: ‘const struct midiMind::protocol::Request’ has no member named ‘id’
  410 |         sendError(hdl, request.id,
      |                                ^~
/home/pi/midiMind/backend/src/api/ApiServer.cpp:439:25: error: ‘const struct midiMind::protocol::Request’ has no member named ‘id’
  439 |                 request.id, data, latency);
      |                         ^~
/home/pi/midiMind/backend/src/api/ApiServer.cpp:450:61: error: ‘COMMAND_FAILED’ is not a member of ‘midiMind::protocol::ErrorCode’
  450 |             protocol::ErrorCode code = protocol::ErrorCode::COMMAND_FAILED;
      |                                                             ^~~~~~~~~~~~~~
/home/pi/midiMind/backend/src/api/ApiServer.cpp:453:45: error: ‘UNKNOWN_COMMAND’ is not a member of ‘midiMind::protocol::ErrorCode’
  453 |                 code = protocol::ErrorCode::UNKNOWN_COMMAND;
      |                                             ^~~~~~~~~~~~~~~
/home/pi/midiMind/backend/src/api/ApiServer.cpp:457:45: error: ‘DEVICE_NOT_FOUND’ is not a member of ‘midiMind::protocol::ErrorCode’
  457 |                 code = protocol::ErrorCode::DEVICE_NOT_FOUND;
      |                                             ^~~~~~~~~~~~~~~~
/home/pi/midiMind/backend/src/api/ApiServer.cpp:459:45: error: ‘DEVICE_BUSY’ is not a member of ‘midiMind::protocol::ErrorCode’
  459 |                 code = protocol::ErrorCode::DEVICE_BUSY;
      |                                             ^~~~~~~~~~~
/home/pi/midiMind/backend/src/api/ApiServer.cpp:468:25: error: ‘const struct midiMind::protocol::Request’ has no member named ‘id’
  468 |                 request.id, code, errorMsg, details);
      |                         ^~
/home/pi/midiMind/backend/src/api/ApiServer.cpp:482:32: error: ‘const struct midiMind::protocol::Request’ has no member named ‘id’
  482 |         sendError(hdl, request.id,
      |                                ^~
make[2]: *** [CMakeFiles/midimind.dir/build.make:443: CMakeFiles/midimind.dir/src/api/ApiServer.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:87: CMakeFiles/midimind.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
